--- a/cmd/garry/Makefile
+++ b/cmd/garry/Makefile
@@ -2,4 +2,4 @@ all:
 	go build -o garry-init "../garry-init"
 	go build -o garry-generate ../garry-generate
 	PATH="./:${PATH}" garry-generate
-	PATH="./:${PATH}" go build
+	go build
