--- a/cmd/garry/Makefile
+++ b/cmd/garry/Makefile
@@ -1,5 +1,5 @@
 all:
-	go build -o garry-init "../garry-init"
-	go build -o garry-generate ../garry-generate
-	PATH="./:${PATH}" garry-generate
+	go build -o bin/garry-init ../garry-init
+	go build -o bin/garry-generate ../garry-generate
+	PATH="./bin:${PATH}" garry-generate
 	go build
